# vector-store

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build-release  deny.toml  run-validator-with-scylla-docker  run-validator-with-scylla-unshare  run-with-release-toolchain  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-cloud-images.yaml  call_jira_status_in_progress.yml  call_jira_status_in_review.yml  call_jira_status_ready_for_merge.yml  daily.yml  rust.yml  update_jira_status_in_progress.yml  update_jira_status_in_review.yml  update_jira_status_ready_for_merge.yml  validator.yml
api/: openapi.json
crates/benchmark/: Cargo.toml
crates/benchmark/src/: data.rs  db.rs  main.rs  vs.rs
crates/benchmark/src/data/: fbin.rs  mod.rs  parquet.rs
crates/e2etest/: Cargo.toml
crates/e2etest-dns/: Cargo.toml
crates/e2etest-dns/src/: lib.rs
crates/e2etest-firewall/: Cargo.toml
crates/e2etest-firewall/src/: lib.rs
crates/e2etest-scylla-cluster/: Cargo.toml
crates/e2etest-scylla-cluster/src/: lib.rs
crates/e2etest-scylla-proxy-cluster/: Cargo.toml
crates/e2etest-scylla-proxy-cluster/src/: lib.rs
crates/e2etest-tls/: Cargo.toml
crates/e2etest-tls/src/: lib.rs
crates/e2etest-vector-store-cluster/: Cargo.toml
crates/e2etest-vector-store-cluster/src/: lib.rs
crates/e2etest/src/: lib.rs  testcase.rs
crates/httpapi/src/: lib.rs
crates/httpclient/: Cargo.toml
crates/httpclient/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator-engine/: Cargo.toml
crates/validator-engine/src/: common.rs  dns.rs  lib.rs  scylla_cluster.rs  vector_store_cluster.rs
crates/validator-engine/src/tests/: ann.rs  crud.rs  full_scan.rs  mod.rs  reconnect.rs  serde.rs
crates/validator-scylla/: Cargo.toml
crates/validator-scylla/src/: lib.rs
crates/validator-tests/: Cargo.toml
crates/validator-tests/src/: common.rs  dns.rs  lib.rs  scylla_cluster.rs  tls.rs  vector_store_cluster.rs
crates/validator-vector-store/: Cargo.toml
crates/validator-vector-store/src/: ann.rs  auth.rs  cdc.rs  connection_timeout.rs  crud.rs  db_timeout.rs  filtering.rs  full_scan.rs  high_availability.rs  index_create.rs  index_status.rs  lib.rs  memory_limit.rs  quantization_and_rescoring.rs  reconnect.rs  serde.rs  similarity_functions.rs  timestamp_filtering.rs
crates/validator/src/: ann.rs  auth.rs  cdc.rs  common.rs  connection_timeout.rs  crud.rs  db_timeout.rs  dns.rs  filtering.rs  full_scan.rs  high_availability.rs  index_create.rs  index_status.rs  lib.rs  main.rs  quantization_and_rescoring.rs  reconnect.rs  routing.rs  scylla_cluster.rs  serde.rs  similarity_functions.rs  tls_reload.rs  ttl.rs  vector_store_cluster.rs
crates/validator/src/alternator/: auth.rs  batch_write_item.rs  create_table.rs  delete_item.rs  lwt.rs  mod.rs  put_item.rs  query.rs  ttl.rs  types.rs  update_item.rs  update_table.rs
crates/validator/src/tests/: ann.rs  common.rs  crud.rs  full_scan.rs  mod.rs  reconnect.rs  serde.rs
crates/vector-store/: Cargo.toml
crates/vector-store/benches/: pipeline.rs
crates/vector-store/src/: async_in_progress.rs  config_manager.rs  db.rs  db_cdc.rs  db_index.rs  db_index_backend.rs  engine.rs  file_monitor.rs  httproutes.rs  httpserver.rs  index_key.rs  indexes.rs  internals.rs  invariant_key.rs  lib.rs  main.rs  memory.rs  metrics.rs  monitor_indexes.rs  monitor_items.rs  node_state.rs  partition_key.rs  perf.rs  primary_key.rs  similarity.rs  table.rs  timestamp.rs  tls.rs  vector.rs  worker.rs
crates/vector-store/src/fts_index/: actor.rs  factory.rs  mod.rs  tantivy.rs
crates/vector-store/src/index/: actor.rs  factory.rs  mod.rs  opensearch.rs  usearch.rs  validator.rs
crates/vector-store/src/table/: column.rs  column_vec.rs  mod.rs  partition_id.rs  primary_id.rs
crates/vector-store/src/vs_index/: actor.rs  factory.rs  mod.rs  opensearch.rs  usearch.rs
crates/vector-store/tests/integration/: db_basic.rs  fts.rs  httpclient.rs  https.rs  info.rs  main.rs  memory_limit.rs  metrics.rs  mock_opensearch.rs  mtls.rs  openapi.rs  opensearch.rs  quantization.rs  routing.rs  status.rs  tls_utils.rs  usearch.rs
docs/: benchmarking.md  quick-start.cql  releasing.md
docs/dev/fts/: full-text-prd-snapshot.md  full-text-search-review-deck.md
docs/examples/docker/: docker-compose-alternator.yml  docker-compose.yml
docs/examples/langchain-rag/: .env.example  README.md  langchain_rag.py  requirements.txt  scylla_langchain.py
packer/: README.md  vector-store-template.json
packer/files/: install_process_exporter.sh  node-exporter-defaults  node-exporter.service  node_exporter_install  process-exporter.yml  vector-store.service  vector_store_install_image
scripts/: README.md  build-release  install-cargo-tools  prepare-docker-qemu  run-validator-with-scylla-docker  run-validator-with-scylla-unshare  run-with-release-toolchain  upload-release
scripts/cluster-in-aws/: README.md  env-aws-cluster-example  make-aws-scylla-instance  make-aws-vs-instance  run-cqlsh-in-aws-cluster  run-nodetool-in-aws-cluster  run-scylla-in-aws-cluster  run-vs-in-aws-cluster
scripts/sizing-algorithm/: ALGORITHM.md  example_sizing.py  test_vss_sizing.py  vss_sizing.py
scripts/sizing-algorithm/webapp/: README.md  app.py  pricing.py  requirements.txt
scripts/sizing-algorithm/webapp/static/: app.js  style.css
scripts/sizing-algorithm/webapp/templates/: index.html
src/: db.rs  db_index.rs  engine.rs  httproutes.rs  httpserver.rs  info.rs  lib.rs  main.rs  metrics.rs  monitor_indexes.rs
src/index/: factory.rs  opensearch.rs  usearch.rs
tests/integration/: db_basic.rs  httpclient.rs  info.rs  main.rs  mock_opensearch.rs  openapi.rs  opensearch.rs  usearch.rs
vector-store-macros/: Cargo.toml
vector-store-macros/src/: lib.rs
