# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[workspace]
members = ["crates/*"]
default-members = ["crates/vector-store"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros"] }
bimap = "0.6.3"
clap = { version = "4.5.40", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hickory-server = "0.25.2"
httpclient = { path = "crates/httpclient" }
itertools = "0.14.0"
macros = { path = "crates/macros" }
mockall = "0.13.1"
ntest = "0.9.3"
opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
proc-macro2 = "1.0"
prometheus = "0.14"
quote = "1.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
scylla = { version = "1.2.0", features = ["time-03"] }
scylla-cdc = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0", features = ["full"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
usearch = { git = "https://github.com/unum-cloud/usearch.git", rev = "68e403a" }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = "1.16.0"
vector-store = { path = "crates/vector-store" }
