# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[workspace]
members = ["crates/*"]
default-members = ["crates/vector-store"]
resolver = "3"

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
license = "LicenseRef-ScyllaDB-Source-Available-1.0"

[workspace.dependencies]
anyhow = "1.0.97"
aws-config = "1.8.14"
aws-credential-types = "1.2.12"
aws-sdk-dynamodb = { version = "1.105.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-runtime-api = "1.11.4"
aws-smithy-types = "1.4.4"
arrow-array = "56.0.0"
async-backtrace = "0.2.7"
async-channel = "2.5.0"
async-trait = "0.1.88"
axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.8.0"
axum-test = "20.0.0"
bcrypt = "0.15"
bigdecimal = "0.4"
bytes = "1.12.0"
const-hex = "1.18.1"
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4.43"
console-subscriber = "0.5.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
e2etest = "0.2.0"
e2etest-dns = "0.1.0"
e2etest-firewall = "0.1.0"
e2etest-scylla-cluster = "0.1.1"
e2etest-scylla-proxy-cluster = "0.1.0"
e2etest-tls = "0.1.0"
e2etest-vector-store-cluster = "0.1.1"
futures = "0.3.31"
hotpath = { version = "0.15.0", features = ["tokio", "futures", "async-channel"] }
http = "1.4.0"
httpapi = { path = "crates/httpapi" }
httpclient = { path = "crates/httpclient" }
humantime = "2.2.0"
itertools = "0.14.0"
linkme = "0.3.36"
macros = { path = "crates/macros" }
mimalloc = "0.1.48"
mockall = "0.13.1"
ntest = "0.9.3"
num-bigint = "0.4"
rustls = "0.23"
rustls-pki-types = "1.13.1"
opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
parquet = { version = "56.0.0", features = ["async"] }
prometheus = "0.14"
quote = "1.0"
rand = "0.10.1"
rcgen = "0.14.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
scylla = { version = "1.5.0", features = ["time-03", "rustls-023", "metrics", "bigdecimal-04", "num-bigint-04"] }
scylla-cdc = "0.6.3"
scylla-proxy = "0.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0", features = ["full"] }
sysinfo = "0.37.2"
tantivy = "0.26.1"
tap = "1.0.1"
tempfile = "3.20.0"
testclient = { path = "crates/testclient" }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "parsing"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-test = "0.2.5"
usearch = "2.22.0"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
uuid = "1.16.0"
vector-store = { path = "crates/vector-store" }
secrecy = "0.10.3"

[patch.crates-io]
# Currently, axum-server-dual-protocol doesn't have a published version that supports axum 0.8, so we need to use the git version from the PR.
axum-server-dual-protocol = { git = "https://github.com/vinchona/axum-server-dual-protocol", rev = "ca6db055254255b74238673ce4135698e347d71c" }

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
