# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "e2etest-firewall"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-backtrace.workspace = true
neli.workspace = true
tokio.workspace = true
tracing.workspace = true
vector-search-validator-tests.workspace = true
