# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "e2etest-scylla-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
e2etest.workspace = true
sysinfo.workspace = true
tap.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
