# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "e2etest-tls"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
vector-search-validator-tests.workspace = true
