# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "vector-search-validator"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap.workspace = true
futures.workspace = true
hickory-server.workspace = true
httpclient.workspace = true
scylla.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vector-store.workspace = true
