# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "vector-search-validator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-dynamodb.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
bcrypt.workspace = true
clap.workspace = true
derive_more.workspace = true
e2etest.workspace = true
e2etest-dns.workspace = true
e2etest-firewall.workspace = true
e2etest-scylla-cluster.workspace = true
e2etest-scylla-proxy-cluster.workspace = true
e2etest-tls.workspace = true
e2etest-vector-store-cluster.workspace = true
http.workspace = true
httpapi.workspace = true
httpclient.workspace = true
itertools.workspace = true
rustls.workspace = true
scylla.workspace = true
scylla-proxy.workspace = true
serde_json.workspace = true
tap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
