# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

# TODO: review and limit dependencies and features

[package]
name = "vector-store"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "vector-store"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"
required-features = ["dev-tools"]

[[bench]]
name = "pipeline"
harness = false

[features]
default = []
dev-tools = []
hotpath = ["hotpath/hotpath"]
console = ["console-subscriber"]
slow-test-hooks = []

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-server.workspace = true
axum-server-dual-protocol.workspace = true
bigdecimal.workspace = true
clap.workspace = true
chrono.workspace = true
const-hex.workspace = true
console-subscriber = {workspace = true, optional = true}
dashmap.workspace = true
derive_more.workspace = true
dotenvy.workspace = true
futures.workspace = true
hotpath.workspace = true
httpapi.workspace = true
humantime.workspace = true
itertools.workspace = true
mimalloc.workspace = true
num-bigint.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
opensearch.workspace = true
prometheus.workspace = true
rand.workspace = true
regex.workspace = true
scylla.workspace = true
scylla-cdc.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tap.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
usearch.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
axum-test.workspace = true
criterion.workspace = true
mockall.workspace = true
ntest.workspace = true
reqwest.workspace = true
httpclient.workspace = true
tempfile.workspace = true
temp-env = "0.3.6"
testclient.workspace = true
tracing-test.workspace = true
rcgen.workspace = true
